// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should call New Relic Event API for $type toggle 1`] = `
{
  "Api-Key": "fakeLicenseKey",
  "Content-Encoding": "gzip",
  "Content-Type": "application/json",
}
`;

exports[`Should call New Relic Event API for $type toggle 2`] = `
{
  "data": [
    31,
    139,
    8,
    0,
    0,
    0,
    0,
    0,
    0,
    19,
    109,
    141,
    205,
    10,
    130,
    64,
    24,
    69,
    223,
    229,
    91,
    143,
    49,
    106,
    160,
    204,
    170,
    2,
    23,
    109,
    218,
    148,
    171,
    104,
    49,
    233,
    213,
    132,
    113,
    140,
    249,
    17,
    68,
    124,
    247,
    144,
    52,
    92,
    180,
    61,
    231,
    92,
    238,
    72,
    232,
    161,
    221,
    109,
    120,
    131,
    4,
    229,
    90,
    65,
    218,
    215,
    21,
    166,
    111,
    10,
    100,
    179,
    33,
    70,
    254,
    75,
    179,
    77,
    88,
    65,
    58,
    111,
    16,
    20,
    6,
    210,
    161,
    36,
    182,
    146,
    139,
    108,
    103,
    111,
    187,
    22,
    129,
    235,
    234,
    90,
    129,
    24,
    45,
    213,
    105,
    88,
    204,
    193,
    91,
    152,
    93,
    209,
    181,
    91,
    151,
    91,
    152,
    115,
    73,
    34,
    8,
    227,
    56,
    249,
    241,
    163,
    35,
    17,
    38,
    17,
    231,
    60,
    226,
    41,
    223,
    39,
    41,
    35,
    253,
    239,
    2,
    90,
    62,
    21,
    74,
    18,
    149,
    84,
    22,
    140,
    172,
    51,
    210,
    161,
    110,
    96,
    73,
    220,
    199,
    117,
    83,
    162,
    146,
    94,
    57,
    154,
    30,
    211,
    7,
    218,
    4,
    56,
    44,
    249,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`Should call New Relic Event API for FEATURE_ARCHIVED toggle with project info 1`] = `
{
  "Api-Key": "fakeLicenseKey",
  "Content-Encoding": "gzip",
  "Content-Type": "application/json",
}
`;

exports[`Should call New Relic Event API for FEATURE_ARCHIVED toggle with project info 2`] = `
{
  "data": [
    31,
    139,
    8,
    0,
    0,
    0,
    0,
    0,
    0,
    19,
    101,
    141,
    75,
    10,
    131,
    48,
    24,
    6,
    239,
    242,
    175,
    99,
    137,
    90,
    136,
    184,
    106,
    11,
    46,
    186,
    233,
    166,
    245,
    0,
    33,
    249,
    170,
    130,
    73,
    36,
    137,
    1,
    41,
    189,
    123,
    145,
    62,
    16,
    186,
    157,
    25,
    152,
    7,
    33,
    193,
    198,
    219,
    50,
    129,
    106,
    106,
    237,
    8,
    25,
    250,
    43,
    124,
    26,
    20,
    154,
    213,
    16,
    163,
    249,
    77,
    155,
    77,
    120,
    135,
    140,
    179,
    71,
    38,
    189,
    234,
    135,
    4,
    77,
    236,
    139,
    46,
    210,
    172,
    65,
    112,
    6,
    89,
    116,
    93,
    55,
    130,
    24,
    41,
    15,
    25,
    161,
    79,
    203,
    199,
    28,
    230,
    0,
    191,
    83,
    206,
    108,
    93,
    27,
    224,
    207,
    154,
    234,
    44,
    47,
    75,
    241,
    227,
    199,
    72,
    117,
    46,
    10,
    206,
    121,
    193,
    43,
    190,
    23,
    21,
    35,
    251,
    191,
    120,
    190,
    0,
    14,
    238,
    15,
    204,
    200,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`Should call New Relic Event API for FEATURE_ARCHIVED with project info 1`] = `
{
  "Api-Key": "fakeLicenseKey",
  "Content-Encoding": "gzip",
  "Content-Type": "application/json",
}
`;

exports[`Should call New Relic Event API for FEATURE_ARCHIVED with project info 2`] = `
{
  "data": [
    31,
    139,
    8,
    0,
    0,
    0,
    0,
    0,
    0,
    19,
    101,
    141,
    75,
    10,
    131,
    48,
    24,
    6,
    239,
    242,
    175,
    99,
    137,
    90,
    136,
    184,
    106,
    11,
    46,
    186,
    233,
    166,
    245,
    0,
    33,
    249,
    170,
    130,
    73,
    36,
    137,
    1,
    41,
    189,
    123,
    145,
    62,
    16,
    186,
    157,
    25,
    152,
    7,
    33,
    193,
    198,
    219,
    50,
    129,
    106,
    106,
    237,
    8,
    25,
    250,
    43,
    124,
    26,
    20,
    154,
    213,
    16,
    163,
    249,
    77,
    155,
    77,
    120,
    135,
    140,
    179,
    71,
    38,
    189,
    234,
    135,
    4,
    77,
    236,
    139,
    46,
    210,
    172,
    65,
    112,
    6,
    89,
    116,
    93,
    55,
    130,
    24,
    41,
    15,
    25,
    161,
    79,
    203,
    199,
    28,
    230,
    0,
    191,
    83,
    206,
    108,
    93,
    27,
    224,
    207,
    154,
    234,
    44,
    47,
    75,
    241,
    227,
    199,
    72,
    117,
    46,
    10,
    206,
    121,
    193,
    43,
    190,
    23,
    21,
    35,
    251,
    191,
    120,
    190,
    0,
    14,
    238,
    15,
    204,
    200,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`Should call New Relic Event API for custom body template 1`] = `
{
  "Api-Key": "fakeLicenseKey",
  "Content-Encoding": "gzip",
  "Content-Type": "application/json",
}
`;

exports[`Should call New Relic Event API for custom body template 2`] = `
{
  "data": [
    31,
    139,
    8,
    0,
    0,
    0,
    0,
    0,
    0,
    19,
    109,
    142,
    187,
    10,
    194,
    64,
    20,
    68,
    255,
    229,
    214,
    27,
    89,
    31,
    144,
    176,
    149,
    10,
    41,
    108,
    108,
    212,
    74,
    44,
    214,
    236,
    36,
    6,
    246,
    33,
    187,
    55,
    1,
    17,
    255,
    93,
    66,
    84,
    82,
    216,
    206,
    153,
    195,
    204,
    147,
    208,
    195,
    243,
    241,
    113,
    7,
    41,
    58,
    121,
    11,
    157,
    110,
    7,
    196,
    190,
    173,
    80,
    14,
    132,
    4,
    117,
    99,
    90,
    78,
    138,
    53,
    52,
    119,
    17,
    25,
    124,
    223,
    198,
    224,
    29,
    60,
    103,
    166,
    77,
    250,
    106,
    97,
    72,
    124,
    241,
    94,
    187,
    161,
    156,
    130,
    67,
    198,
    161,
    105,
    44,
    72,
    208,
    68,
    33,
    69,
    6,
    61,
    108,
    184,
    187,
    113,
    169,
    138,
    208,
    12,
    179,
    125,
    124,
    172,
    117,
    151,
    16,
    103,
    85,
    112,
    83,
    118,
    74,
    136,
    59,
    67,
    42,
    155,
    47,
    151,
    249,
    47,
    223,
    48,
    169,
    121,
    190,
    144,
    82,
    46,
    100,
    33,
    87,
    121,
    33,
    200,
    255,
    159,
    31,
    79,
    170,
    90,
    219,
    4,
    65,
    137,
    163,
    102,
    52,
    45,
    18,
    169,
    243,
    243,
    235,
    24,
    212,
    186,
    179,
    76,
    175,
    203,
    235,
    13,
    102,
    132,
    253,
    120,
    34,
    1,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`Should call New Relic Event API for customHeaders in headers when calling service 1`] = `
{
  "Api-Key": "fakeLicenseKey",
  "Content-Encoding": "gzip",
  "Content-Type": "application/json",
  "MY_CUSTOM_HEADER": "MY_CUSTOM_VALUE",
}
`;

exports[`Should call New Relic Event API for customHeaders in headers when calling service 2`] = `
{
  "data": [
    31,
    139,
    8,
    0,
    0,
    0,
    0,
    0,
    0,
    19,
    109,
    142,
    187,
    10,
    194,
    64,
    20,
    68,
    255,
    229,
    214,
    27,
    89,
    31,
    144,
    176,
    149,
    10,
    41,
    108,
    108,
    212,
    74,
    44,
    214,
    236,
    36,
    6,
    246,
    33,
    187,
    55,
    1,
    17,
    255,
    93,
    66,
    84,
    82,
    216,
    206,
    153,
    195,
    204,
    147,
    208,
    195,
    243,
    241,
    113,
    7,
    41,
    58,
    121,
    11,
    157,
    110,
    7,
    196,
    190,
    173,
    80,
    14,
    132,
    4,
    117,
    99,
    90,
    78,
    138,
    53,
    52,
    119,
    17,
    25,
    124,
    223,
    198,
    224,
    29,
    60,
    103,
    166,
    77,
    250,
    106,
    97,
    72,
    124,
    241,
    94,
    187,
    161,
    156,
    130,
    67,
    198,
    161,
    105,
    44,
    72,
    208,
    68,
    33,
    69,
    6,
    61,
    108,
    184,
    187,
    113,
    169,
    138,
    208,
    12,
    179,
    125,
    124,
    172,
    117,
    151,
    16,
    103,
    85,
    112,
    83,
    118,
    74,
    136,
    59,
    67,
    42,
    155,
    47,
    151,
    249,
    47,
    223,
    48,
    169,
    121,
    190,
    144,
    82,
    46,
    100,
    33,
    87,
    121,
    33,
    200,
    255,
    159,
    31,
    79,
    170,
    90,
    219,
    4,
    65,
    137,
    163,
    102,
    52,
    45,
    18,
    169,
    243,
    243,
    235,
    24,
    212,
    186,
    179,
    76,
    175,
    203,
    235,
    13,
    102,
    132,
    253,
    120,
    34,
    1,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`Should call New Relic Event API for toggled environment 1`] = `
{
  "Api-Key": "fakeLicenseKey",
  "Content-Encoding": "gzip",
  "Content-Type": "application/json",
}
`;

exports[`Should call New Relic Event API for toggled environment 2`] = `
{
  "data": [
    31,
    139,
    8,
    0,
    0,
    0,
    0,
    0,
    0,
    19,
    109,
    142,
    187,
    10,
    194,
    64,
    20,
    68,
    255,
    229,
    214,
    27,
    89,
    31,
    144,
    176,
    149,
    10,
    41,
    108,
    108,
    212,
    74,
    44,
    214,
    236,
    36,
    6,
    246,
    33,
    187,
    55,
    1,
    17,
    255,
    93,
    66,
    84,
    82,
    216,
    206,
    153,
    195,
    204,
    147,
    208,
    195,
    243,
    241,
    113,
    7,
    41,
    58,
    121,
    11,
    157,
    110,
    7,
    196,
    190,
    173,
    80,
    14,
    132,
    4,
    117,
    99,
    90,
    78,
    138,
    53,
    52,
    119,
    17,
    25,
    124,
    223,
    198,
    224,
    29,
    60,
    103,
    166,
    77,
    250,
    106,
    97,
    72,
    124,
    241,
    94,
    187,
    161,
    156,
    130,
    67,
    198,
    161,
    105,
    44,
    72,
    208,
    68,
    33,
    69,
    6,
    61,
    108,
    184,
    187,
    113,
    169,
    138,
    208,
    12,
    179,
    125,
    124,
    172,
    117,
    151,
    16,
    103,
    85,
    112,
    83,
    118,
    74,
    136,
    59,
    67,
    42,
    155,
    47,
    151,
    249,
    47,
    223,
    48,
    169,
    121,
    190,
    144,
    82,
    46,
    100,
    33,
    87,
    121,
    33,
    200,
    255,
    159,
    31,
    79,
    170,
    90,
    219,
    4,
    65,
    137,
    163,
    102,
    52,
    45,
    18,
    169,
    243,
    243,
    235,
    24,
    212,
    186,
    179,
    76,
    175,
    203,
    235,
    13,
    102,
    132,
    253,
    120,
    34,
    1,
    0,
    0,
  ],
  "type": "Buffer",
}
`;
